[fix] made visibile button in header

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,13 @@
 .d-flex {
   display: flex;
 }
+
+.active {
+  text-decoration: underline;
+  text-decoration-color: #acff2e;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 5px;
+}
 .btn {
   padding: 13px 40px;
   color: white;
@@ -23,12 +30,6 @@
   cursor: pointer;
   color: rgb(219, 218, 218);
 }
-.active {
-  text-decoration: underline;
-  text-decoration-color: #acff2e;
-  text-decoration-thickness: 2px;
-  text-underline-offset: 5px;
-}
 
 /* MAIN SECTION *********** */
 main {
@@ -39,6 +40,7 @@ main {
 main .sidebar {
   width: 230px;
   height: calc(100vh - 90px);
+  z-index: 1000;
 }
 main .sidebar .installa {
   width: 100%;
@@ -52,20 +54,29 @@ main .songs {
   overflow: auto;
   background-color: #141922;
 }
+/* nav fixed ** */
 main .songs .nav-fix {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1000;
   width: 100%;
   height: 90px;
-  background-color: #090b12;
+  background-color: rgba(0, 0, 0, 0.5);
   justify-content: end;
   align-items: center;
-  padding-right: 5px;
+  padding-right: 25px;
 }
+
 /* navbar ****** */
 main .songs .navbar {
   width: 100%;
   height: 50px;
+  margin-top: 90px;
   background-color: #141922;
   justify-content: center;
+  position: sticky;
+  top: 90px;
 }
 main .songs .navbar .links {
   align-items: center;
